<resources>
    <string name="app_name">Safecard</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="internet_connection">Verifique conexión a internet.</string>
    <string name="no_privileges">No tienes privilegios para realizar esta acción</string>
    <string name="monday_first_letter">L</string>
    <string name="tuesday_first_letter">M</string>
    <string name="wednesday_first_letter">X</string>
    <string name="thursday_first_letter">J</string>
    <string name="friday_first_letter">V</string>
    <string name="saturday_first_letter">S</string>
    <string name="sunday_first_letter">D</string>
    <string name="monday_first3_letters">lun</string>
    <string name="tuesday_first3_letters">mar</string>
    <string name="wednesday_first3_letters">mie</string>
    <string name="thursday_first3_letters">jue</string>
    <string name="friday_first3_letters">vie</string>
    <string name="saturday_first3_letters">sab</string>
    <string name="sunday_first3_letters">dom</string>
    <string name="invitation_subject">Ingresa el motivo de la invitación</string>
    <string name="invitation_to">Invitación a</string>
    <string name="invitation_valid_between_days">Invitación válida</string>
    <string name="day_from">Desde el</string>
    <string name="day_to">Hasta el</string>
    <string name="all_days_of_week">Para todos los días de la semana</string>
    <string name="all_day">Por todo el día</string>
    <string name="time_from">Desde las</string>
    <string name="time_to">Hasta las</string>
    <string name="allowed_sectors">Sectores permitidos</string>
    <string name="add_a_plate">Ingresar patente</string>
    <string name="add_a_plate_placeholder">Ingresa patente vehicular</string>
    <string name="plate_info">Ingresa la patente vehicular de tu invitado para que pueda operar por reconocimiento de patentes</string>
    <string name="invitation_summary_tittle">Resumen de la invitación</string>
    <string name="invitation_summary_content">Invitación para [guest_name] a [property] desde el [start] hasta el [end]. Para [days] Desde las [start_time] hasta las [end_time]</string>
    <string name="continue_button">Siguiente</string>
    <string name="invitation_customization_day_sunday">domingo</string>
    <string name="invitation_customization_day_monday">lunes</string>
    <string name="invitation_customization_day_tuesday">martes</string>
    <string name="invitation_customization_day_wednesday">miércoles</string>
    <string name="invitation_customization_day_thursday">Jueves</string>
    <string name="invitation_customization_day_friday">viernes</string>
    <string name="invitation_customization_day_saturday">sábado</string>
    <string name="invitation_customization_required_field">Campo requerido</string>
    <string name="invitation_customization_plate_format_not_valid">Formato de patente no válido</string>
    <string name="invitation_customization_dialog_title">Invitación</string>
    <string name="invitation_customization_dialog_day_is_not_in_date_range">El día %s no se encuentra dentro del rango de fechas definido.</string>
    <string name="invitation_customization_dialog_ok">OK</string>
    <string name="invitation_customization_validator_date_from_must_be_greater_or_equal_than_current_date">La fecha \'Desde\' debe ser mayor o igual a la fecha actual</string>
    <string name="invitation_customization_validator_date_to_must_be_greater_or_equal_than_date_from">La fecha \'Hasta\' debe ser mayor o igual que la fecha \'Desde\'</string>
    <string name="invitation_customization_validator_time_to_must_be_greater_than_time_from">La hora \'Hasta\' debe ser mayor que la hora \'Desde\'</string>
    <string name="invitation_customization_validator_select_valid_days_of_week">Seleccione los días de la semana en los que será válida la invitación</string>
    <string name="invitation_customization_validator_plate_required">Patente requerida</string>
    <string name="invitation_customization_validator_must_add_plate_or_disable_switch">Debe ingresar patente o desactivar el switch</string>
    <string name="invitation_customization_validator_plate_format_not_valid">Formato de patente no válido</string>
    <string name="invitation_customization_validator_plate_format_not_valid2">Formato de patente no válido</string>
    <string name="invitation_customization_validator_dialog_title">Invitación</string>
    <string name="invitation_customization_validator_dialog_button_ok">OK</string>
    <string name="invitation_customization_no_sector_selected">Ningún sector Seleccionado</string>
    <string name="invitation_customization_all_sector_selected">Todos</string>
    <string name="invitation_customization_pick_sectors_title">Sectores permitidos</string>
    <string name="safecard_url">www.safecard.cl</string>
    <string name="support_email">soporte@safecard.cl</string>
    <string name="backoffice_url">backoffice.safecard.cl</string>
    <string name="terms_and_conditions">Términos y condiciones</string>
    <string name="mission">Nuestra misión es lograr que tengas completo control del acceso a tu propiedad de manera autónoma, fácil y segura.</string>
    <string name="mobiles">Teléfono: (56 2) 3221 1841 | (56 9) 6843 1099</string>
    <string name="activity_about_title">Acerca de</string>
    <string name="activity_about_debuggable">Debuggable</string>
    <string name="about_version">Version %s</string>
    <string name="about_device">Device %s</string>
    <string name="about_email">soporte@safecard.cl</string>
    <string name="about_email_subject">Soporte Safecard Android</string>
    <string name="about_send_mail">Enviar correo</string>
    <string name="about_url_link_safecard">https://www.safecard.cl/</string>
    <string name="about_url_link_backoffice">https://backoffice.safecard.cl/</string>
    <string name="about_url_link_terms">https://www.safecard.cl/terms?lang=%s</string>
    <string name="activity_access_log_msg_title">Log</string>
    <string name="activity_access_log_msg_no_properties">No tiene propiedades asociadas.</string>
    <string name="activity_access_log_msg_ok_button">OK</string>
    <string name="activity_access_log_msg_ok_button2">OK</string>
    <string name="activity_access_call_phone_permission_title">Llamadas</string>
    <string name="activity_access_call_phone_permission_msg">Para usar esta funcionalidad es necesario que otorgues permiso para hacer llamadas.</string>
    <string name="activity_access_call_phone_permission_msg_ok_button">OK</string>
    <string name="activity_access_call_phone_permission_msg_cancel_button">CANCELAR</string>
    <string name="default_access">Acceso por defecto</string>
    <string name="no_access_registered">No registra accesos</string>
    <string name="default_sector">Sector por defecto</string>
    <string name="default_access_type">Tipo de acceso por defecto</string>
    <string name="geolocate_property">Georeferenciar propiedad</string>
    <string name="geolocate_property_explanation">Guarda la ubicación de tu propiedad para compartir las coordenadas en tus invitaciones</string>
    <string name="plate_bind">Vincular patente vehicular</string>
    <string name="activity_advanced_configuration_plate_service_not_available">Estimado residente la funcionalidad de acceso por auto reconocimiento de patentes no está activo en su recinto, para más información contacte a su administrador o escríbanos a ventas@safecard.cl</string>
    <string name="activity_advanced_configuration_title">Configuración avanzada</string>
    <string name="activity_advanced_configuration_you_dont_have_properties">Usted no posee propiedades</string>
    <string name="activity_advanced_configuration_property_not_active">Propiedad no activa</string>
    <string name="activity_advanced_configuration_no_properties">Sin Propiedades</string>
    <string name="activity_advanced_configuration_already_geolocated">Esta propiedad ya fue geolocalizada. ¿Seguro quieres editar la geolocalización de la propiedad?</string>
    <string name="activity_advanced_configuration_condo_no_geolocated">El recinto no ha sido geolocalizado. No se puede geolocalizar esta propiedad</string>
    <string name="activity_advanced_configuration_no_privileges">No tienes privilegios para realizar esta acción</string>
    <string name="activity_advanced_configuration_no_google">No disponible por el momento en dispositivos Huawei</string>
    <string name="last_movements">Últimos movimientos</string>
    <string name="authorize_pending_payments">Autorizar pagos pendientes</string>
    <string name="activity_billing_title">Cartola de Parking</string>
    <string name="activity_billing_sending_payment_authorization">Enviando autorización de pago</string>
    <string name="activity_billing_successfully_charged">Se ha efectuado el cobro correctamente</string>
    <string name="activity_billing_last_x_movements">ÚLTIMOS %d MOVIMIENTOS</string>
    <string name="confirm_your_location">Confirma tu ubicación correcta.</string>
    <string name="confirm_button">Confirmar</string>
    <string name="activity_geo_houses_grant">Dar permiso</string>
    <string name="geo_houses_edit_and_confirm_your_location">Edita y confirma tu ubicación correcta</string>
    <string name="geo_houses_saving_your_location_wait_please">Guardando ubicación. Espere un momento.</string>
    <string name="geo_houses_geolocation_successful">La propiedad fue geolocalizada exitosamente.</string>
    <string name="geo_houses_geolocation_successful2">La propiedad fue geolocalizada exitosamente.</string>
    <string name="geo_houses_condo_not_geolocated">Recinto no geolocalizado.</string>
    <string name="geo_houses_drag_this_marker_to_your_house">Arrastra este marcador hasta tu propiedad.</string>
    <string name="geo_houses_we_need_access_to_your_location">Safecard necesita acceder a tu ubicación.</string>
    <string name="go_to_parking">Ir al parking</string>
    <string name="wait_a_moment_while_loading_data">Espera un momento mientras cargamos tu información.</string>
    <string name="new_plate_explanation">Vincula la patente de tu vehículo para accionar la apertura de barreras sin necesidad de usar el control remoto u otro medio de apertura.</string>
    <string name="plate_input_placeholder">Ingresa patente vehicular</string>
    <string name="add_plate_button">Agregar patente</string>
    <string name="new_plate_title">Nueva patente</string>
    <string name="new_plate_validation_enter_a_plate">Ingrese la patente</string>
    <string name="update_your_data_here">Edita tus datos a continuación</string>
    <string name="edit_profile_name_placeholder">Nombre</string>
    <string name="edit_profile_lastname_placeholder">Apellido</string>
    <string name="edit_profile_email_placeholder">Email</string>
    <string name="all_fields_are_required">Todos los campos son obligatorios</string>
    <string name="edit_profile_continue_button">Actualizar</string>
    <string name="use_your_pin_to_unlock">Ingresa tu PIN para desbloquear la aplicación</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="update_available_explanation">Esta versión de Safecard requiere una actualización. ¿Deseas actualizar a la versión más reciente?</string>
    <string name="update_available_ok_button">ACTUALIZAR</string>
    <string name="update_available_cancel_button">CANCELAR</string>
    <string name="action_logs">Logs</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_map">Mapa</string>
    <string name="action_phone_call">Llamar Conserjería</string>
</resources>