<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_parking_search"
        android:orderInCategory="1"
        android:title="@string/action_map"
        app:showAsAction="ifRoom|withText"
        android:tint="@android:color/darker_gray"/>

    <item
        android:id="@+id/action_logs"
        android:icon="@drawable/ic_history_white"
        android:orderInCategory="1"
        android:title="@string/action_logs"
        app:showAsAction="ifRoom|withText"
        android:tint="@android:color/darker_gray"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_ajustes"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom|withText"
        android:tint="@android:color/darker_gray"/>

</menu>