<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_above="@+id/layout_top"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logo_about" />



    <LinearLayout
        android:layout_above="@+id/layout_middle"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_top">

        <TextView
            android:id="@+id/environment"
            android:text="[environment]"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:ignore="HardcodedText"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/debuggable"
            android:text="@string/activity_about_debuggable"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/version"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="[Version 2.X]"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/device"
            android:text="[Device XXXXXXXX]"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:layout_above="@+id/layout_bottom"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_middle"
        android:gravity="center">

        <TextView
            android:id="@+id/website"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safecard_url"
            android:textColor="#6c7684"
            android:gravity="center"/>

        <TextView
            android:id="@+id/mailto"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_email"
            android:textColor="#6c7684"
            android:gravity="center"/>

        <TextView
            android:id="@+id/backoffice"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backoffice_url"
            android:textColor="#6c7684"
            android:gravity="center"/>

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:textColor="#6c7684"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="32dp"
        android:padding="4dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/layout_bottom"
        android:gravity="center">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mission"
            android:textColor="#6c7684"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/mobiles"
            android:textColor="#6c7684"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>
