<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView9"
        android:layout_margin="30dp"
        android:src="@drawable/ic_actualizar"
        android:gravity="center"/>

    <TextView
        android:text="@string/update_available_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:padding="5dp"
        android:id="@+id/text"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:gravity="center"/>


    <Button
        android:text="@string/update_available_ok_button"
        android:layout_width="match_parent"
        android:id="@+id/action"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_height="45dp"
        android:theme="@style/AppThemeForm.Button"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/button"/>

    <TextView
        android:text="@string/update_available_cancel_button"
        android:layout_width="match_parent"
        android:id="@+id/cancel"
        android:layout_marginTop="7dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:layout_height="45dp"
        android:theme="@style/AppThemeForm.Button2"
        android:gravity="center_vertical|center_horizontal" />

</LinearLayout>